[gd_scene load_steps=9 format=2]

[ext_resource path="res://objects/rocket/rocket.gd" type="Script" id=1]
[ext_resource path="res://objects/rocket/sprite_open.png" type="Texture" id=2]
[ext_resource path="res://interface/progress_bar_fg.tres" type="StyleBox" id=3]
[ext_resource path="res://interface/progress_bar_bg.tres" type="StyleBox" id=4]

[sub_resource type="Curve" id=1]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.997846, 0 ), -2.67157, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]

flags = 4
width = 32
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 8.35174e-43
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 16.0
scale_random = 0.12
scale_curve = SubResource( 2 )
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Scale" ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 136, 32 )

[node name="rocket" type="Node2D"]

script = ExtResource( 1 )
icons_path = null
score_path = null

[node name="particles" type="Particles2D" parent="." index="0"]

position = Vector2( 0, -16 )
emitting = false
amount = 8
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 3 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material" ]

[node name="sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )
offset = Vector2( 0, -248 )

[node name="area" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="shape" type="CollisionShape2D" parent="area" index="0"]

position = Vector2( 0, -32 )
shape = SubResource( 4 )

[node name="progress_bar" type="ProgressBar" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -64.0
margin_top = -40.0
margin_right = 64.0
margin_bottom = -24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = ExtResource( 3 )
custom_styles/bg = ExtResource( 4 )
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
percent_visible = false
_sections_unfolded = [ "custom_styles" ]

[connection signal="area_entered" from="area" to="." method="_on_area_entered"]

[connection signal="area_exited" from="area" to="." method="_on_area_exited"]

[connection signal="value_changed" from="progress_bar" to="." method="_on_progress_bar_value_changed"]


